@@ -3268,8 +3268,12 @@ void pc_paycash(struct map_session_data *sd, int price, int points)
 
 	pc_setaccountreg(sd,"#CASHPOINTS",sd->cashPoints - cash);
 	pc_setaccountreg(sd,"#KAFRAPOINTS",sd->kafraPoints - points);
-	sprintf(output, "Used %d kafra points and %d cash points. %d kafra and %d cash points remaining.", points, cash, sd->kafraPoints, sd->cashPoints);
-	clif_disp_onlyself(sd, output, strlen(output));
+
+	if( battle_config.cashshop_show_points )
+	{
+		sprintf(output, msg_txt(504), points, cash, sd->kafraPoints, sd->cashPoints);
+		clif_disp_onlyself(sd, output, strlen(output));
+	}
 }
 
 void pc_getcash(struct map_session_data *sd, int cash, int points)
@@ -3281,16 +3285,22 @@ void pc_getcash(struct map_session_data *sd, int cash, int points)
 	{
 		pc_setaccountreg(sd,"#CASHPOINTS",sd->cashPoints + cash);
 
-		sprintf(output, "Gained %d cash points. Total %d points", cash, sd->cashPoints);
-		clif_disp_onlyself(sd, output, strlen(output));
+		if( battle_config.cashshop_show_points )
+		{
+			sprintf(output, msg_txt(505), cash, sd->cashPoints);
+			clif_disp_onlyself(sd, output, strlen(output));
+		}
 	}
 
 	if( points > 0 )
 	{
 		pc_setaccountreg(sd,"#KAFRAPOINTS",sd->kafraPoints + points);
 
-		sprintf(output, "Gained %d kafra points. Total %d points", points, sd->kafraPoints);
-		clif_disp_onlyself(sd, output, strlen(output));
+		if( battle_config.cashshop_show_points )
+		{
+			sprintf(output, msg_txt(506), points, sd->kafraPoints);
+			clif_disp_onlyself(sd, output, strlen(output));
+		}
 	}
 }
 
